# M18QxIotMonitor

./: .gitignore  HTS221.cpp  HTS221.hpp  HTS221Reg.h  HTU21D.cpp  HTU21D.hpp  KMA36.hpp  LightRanger.cpp  MAX31855.cpp  MAX31855.hpp  MS5637.cpp  MS5637.hpp  Makefile.am  MyBuffer.cpp  README.md  TSYS01.cpp  TSYS01.hpp  TSYS02D.cpp  TSYS02D.hpp  adc.c  adc.h  apn_update.sh  binio.c  binio.h  commands.cpp  configure  configure.ac  custapp-postinit.sh  demo.c  emissions.cpp  fact_script.bat  fact_test.bat  facttest.cpp  firmware_update.bat  hts221.c  hts221.h  http.c  http.h  iot_monitor.h  jsmn.c  (+19 more)
vl53l0x/: BUILD_LINUX_LIB.sh  vl53l1_Ranging_Example.c
vl53l0x/core/inc/: vl53l1_api.h  vl53l1_api_calibration.h  vl53l1_api_core.h  vl53l1_api_debug.h  vl53l1_api_preset_modes.h  vl53l1_core.h  vl53l1_core_support.h  vl53l1_def.h  vl53l1_dmax_structs.h  vl53l1_error_codes.h  vl53l1_error_strings.h  vl53l1_hist_structs.h  vl53l1_ll_def.h  vl53l1_ll_device.h  vl53l1_nvm.h  vl53l1_nvm_map.h  vl53l1_nvm_structs.h  vl53l1_preset_setup.h  vl53l1_tuning_parm_defaults.h
vl53l0x/core/src/: vl53l1_api.c  vl53l1_api_calibration.c  vl53l1_api_core.c  vl53l1_api_debug.c  vl53l1_api_preset_modes.c  vl53l1_core.c  vl53l1_core_support.c  vl53l1_nvm.c  vl53l1_nvm_debug.c
vl53l0x/platform/inc/: vl53l1_platform.h  vl53l1_platform_init.h  vl53l1_platform_user_config.h  vl53l1_platform_user_data.h
vl53l0x/platform/src/: vl53l0x_i2c_win_serial_comms.c  vl53l0x_platform.c  vl53l0x_platform_log.c  vl53l1_platform.c  vl53l1_platform_ipp.c  vl53l1_platform_log.c
vl53l0x/protected/inc/: vl53l1_sigma_estimate.h  vl53l1_xtalk.h  vl53l1_xtalk_private_structs.h
vl53l0x/protected/src/: vl53l1_hist_algos_gen3.c  vl53l1_hist_funcs.c  vl53l1_sigma_estimate.c  vl53l1_xtalk.c
vl53l0x/ranging_sensor_comms_includes/: RANGING_SENSOR_COMMS.txt
vl53l0x/ranging_sensor_comms_includes/Include/: comms_platform.h  gpio_defs.h  power_board_defs.h  ranging_sensor_comms.h  version_def.h
